# anvil

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
examples/: basic-rag.yaml
projects/haystack-rag/: README.md  pyproject.toml
projects/haystack-rag/src/anvil/: loaders.py
projects/haystack-rag/src/anvil/cli/commands/: serialize.py
projects/haystack-rag/src/anvil/pipelines/: utils.py
projects/haystack-rag/src/anvil/registry/: __init__.py  types.py  utils.py
projects/langchain-indexing-experiment/: .gitignore  README.md  main.py  pyproject.toml
src/anvil/: utils.py
src/anvil/cli/: app.py
src/anvil/cli/commands/: base.py  registry.py  run.py
