[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anvil"
version = "0.1.0"
description = "Lightweight RAG pipelines: register, run, status, serialize."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "attrs==25.3.0",
    "backoff==2.2.1",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "distro==1.9.0",
    "docstring-parser==0.17.0",
    "filetype==1.2.0",
    "h11==0.16.0",
    "haystack-ai==2.17.1",
    "haystack-experimental==0.13.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "jinja2==3.1.6",
    "jiter==0.11.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "lazy-imports==1.0.1",
    "markupsafe==3.0.2",
    "more-itertools==10.8.0",
    "networkx==3.5",
    "numpy==2.3.3",
    "openai==1.108.1",
    "posthog==6.7.5",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "requests==2.32.5",
    "rpds-py==0.27.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "tenacity==9.1.2",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
]

[project.scripts]
anvil = "anvil.cli.app:main"

[tool.setuptools.packages.find]
where = ["src"]

# If we choose to ship example YAMLs inside the package, uncomment:
#[tool.setuptools.package-data]
#anvil = ["examples/pipelines/*.yaml"]
